[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 1.8

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")
collision_layer = 2
collision_mask = 29

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="PlayerModel" type="Node3D" parent="."]

[node name="WeaponMount" type="Marker3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 1.3, -0.3)

[node name="MuzzlePoint" type="Marker3D" parent="PlayerModel/WeaponMount"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
spring_length = 3.5
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
fov = 75.0

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="DamageOverlay" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="Crosshair" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairDot" type="ColorRect" parent="HUD/Crosshair"]
layout_mode = 2
custom_minimum_size = Vector2(3, 3)
color = Color(0, 1, 0.8, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "100"
theme_override_font_sizes/font_size = 28

[node name="HealthBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 12)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="AmmoContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -90.0
offset_right = -30.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponLabel" type="Label" parent="HUD/AmmoContainer"]
layout_mode = 2
text = "ASSAULT RIFLE"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 14

[node name="AmmoLabel" type="Label" parent="HUD/AmmoContainer"]
layout_mode = 2
text = "30 / 120"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 32

[node name="ScoreContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 30.0
offset_right = -30.0
grow_horizontal = 0

[node name="ScoreLabel" type="Label" parent="HUD/ScoreContainer"]
layout_mode = 2
text = "SCORE  0"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 22

[node name="KillLabel" type="Label" parent="HUD/ScoreContainer"]
layout_mode = 2
text = "KILLS  0"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 16

[node name="TimerContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 30.0
offset_right = 60.0
grow_horizontal = 2

[node name="TimerLabel" type="Label" parent="HUD/TimerContainer"]
layout_mode = 2
text = "0:00"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="WaveContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 60.0
offset_right = 80.0
grow_horizontal = 2

[node name="WaveLabel" type="Label" parent="HUD/WaveContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 26

[node name="ComboContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="ComboLabel" type="Label" parent="HUD/ComboContainer"]
layout_mode = 2
visible = false
text = ""
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="KillPopups" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
